implementing line chart graph
