# src/app/services/models/transaction-comparison-dto.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { TransactionDto } from '../models/transaction-dto';
+export interface TransactionComparisonDto {
+  expectedTransactions?: Array<TransactionDto>;
+  realTransactions?: Array<TransactionDto>;
+  totalExpected?: number;
+  totalReal?: number;
+}
